Updates to errorhandling, general cleanup, removed DTraceProvider (heroku incompat.), other heroku stuff

--- a/templates/magic/help.hbs
+++ b/templates/magic/help.hbs
@@ -1,1 +1,2 @@
-{{#list commands}}<b>{{command}}</b> {query text}&nbsp;&nbsp;&nbsp;&nbsp;{{description}}{{/list}}
+Available commands:<br />
+{{#list commands}}<b>{{command}}</b>&nbsp;&nbsp;&nbsp;&nbsp;{{description}}{{/list}}
