Initial hearthstone support for card search

--- a/templates/hearthstone/card.hbs
+++ b/templates/hearthstone/card.hbs
@@ -2,12 +2,12 @@
  <tr>
  {{#if cardHasImage}}
   <td>
-   <a href="{{cardImageLink}}"><img src="{{cardImageLink}}" height="300px"/></a>
+  <img src="{{cardImageLink}}" height="300px" />
   </td>
   {{/if}}
   {{#if cardHasGoldImage}}
     <td>
-   <a href="{{cardGoldImageLink}}"><img src="{{cardGoldImageLink}}" height="300px"/></a>
+   <img src="{{cardGoldImageLink}}" height="300px" />
   </td>
   {{/if}}
   <td valign="top">
